--- a/css/PriceTable.css
+++ b/css/PriceTable.css
@@ -23,80 +23,94 @@
     src: url("../fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf");
 }
 
-
-/*.wrap{
-width: 1920px;
-margin: auto;
-background-color: yellow;
-}*/
-
-.header {
-    height: 912px;
-    background-color: #2c2e3d;
-}
-
-.header-navbar {
-    padding-top: 20px;
-    width: 1170px;
-    height: 50px;
+.wrap {
     margin: auto;
+}
+
+.container {
+    width: 1170px;
+    margin: auto;
+}
+
+.khoi1 {
+    height:959px;
+    /*width: 1920px;*/
+    background:#2c2e3d;
+}
+
+/*Header*/
+.header {
+    height: 40px;
     background-color: #2c2e3d;
+    display: flex;
+    padding-top: 24px;
 }
 
-.myNavbar-logo {
-    background-image: url("../image/Logo_TheGem.png");
-    background-repeat: no-repeat;
-    height: 35px;
-    width: 166px;
-    float: left;
-    margin-right: 100px;
+.header-menu{
+    margin-left:75px;
 }
 
-.myNavbar-menu,
-.myNavbar-item {
-    display: inline-block;
+ul {
+    list-style-type: none;
+   
 }
 
-.myNavbar-menu ul {
-    list-style: none;
-}
-
-li {
-    display: inline-block;
-}
-
-.myNavbar-menu ul li a {
-    font-family: Montserrat-Bold;
-    color: #99a9b5;
+a{
     text-decoration: none;
-    font-weight: bold;
-    display: block;
-    padding: 12px;
 }
 
-.myNavbar-menu ul li a:focus {
-    color: #fff;
-    padding: 10px;
+.header-menu ul li {
+    display: inline-flex;
+    margin-right: 15px;
+}
+
+.header-menu ul li a {
+    color: white;
+    padding: 10px 18px;
+    font-family: Montserrat-Bold;
+    font-size: 14px;
+}
+
+.header-menu ul li a:focus {
     border: 2px solid #fff;
+    padding: 8px 16px;
 }
 
-.myNavbar-menu ul li a:hover {
+.header-menu ul li a:hover {
     color: #08a6bc;
 }
 
-.myNavbar-item{
-    margin-left: 50px;
+.header-icon ul li {
+   /* margin-left:4px;
+    margin-top: 10px;*/
+    display: inline-flex;
+}
+
+.add{
+    font-family: SourceSansPro-Regular;
+    font-size: 14px;
+    display: inline-flex;
+    width: 32px;
+    height: 17px;
+    background-image: url("../image/add.png");
+    justify-content: center;
+    color: #fff;
 }
 
 .item {
     color: #98a8b4;
-    margin-right: 10px;
+    margin-right:4px;
 }
 
-.header-slider {
-    height: 700px;
-    background-color: #2c2e3d;
+
+/*Slider*/
+
+.slider {
+    height: 745px;
+    /*width: 1920px;*/
     padding-top: 150px;
+    background-color:#2c2e3d;
+    /*margin-left: -375px;*/
     text-align: center;
 }
 
@@ -108,7 +122,7 @@ li {
 
 .slider-caption {
     font-family: Montserrat-Light;
-    padding-top: 105px;
+    padding-top: 112px;
     color: #fff;
     font-size: 70px;
     text-transform: uppercase;
@@ -128,43 +142,34 @@ li {
 
 .slider-button {
     color: #fff;
-    margin-top: 85px;
+    margin-top: 82px;
     display: inline-flex;
 }
 
-.button-purchase {
+.button-pur{
     font-family: Montserrat-Bold;
-    padding: 5px 10px;
+    width: 226px;
+    height: 44px;
+    line-height: 44px;
     border: 2px solid #fff;
-    border-radius: 20px;
+    border-radius: 30px;
+    margin-right:30px;
+    color: #fff;
+    font-size: 14px;
     cursor: pointer;
 }
 
-.button-details {
-    font-family: Montserrat-Bold;
-    padding: 5px 10px;
-    border: 2px solid #fff;
-    border-radius: 20px;
-    margin-left: 30px;
-    cursor: pointer;
-}
-
-.rounded:hover {
+.slider-button a:hover {
     color: #4ec3c9;
     border: 2px solid #4ec3c9;
 }
 
 
-/*End slider*/
 
-.container {
-    width: 1170px;
-    margin: auto;
-    background-color: #fff;
+.khoi2{
 }
 
-
-/*Star title*/
+/*Title*/
 
 .titledark {
     text-align: center;
@@ -187,23 +192,20 @@ li {
 }
 
 
-/*End title*/
-
-
-/*Star Pricing Table 1*/
+/*Pricing Table 1*/
 
 .table1 {
     margin: 160px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    text-align: center;
 }
 
 .block-1 {
-    width: 291px;
+    width: 292px;
     height: 670px;
     background: #f0f3f2;
-    border: 0.5px solid #dfe5e8;
     position: relative;
 }
 
@@ -216,13 +218,15 @@ li {
 .table-title {
     font-family: Montserrat-Light;
     font-size: 24px;
-    width: 292px;
-    text-align: center;
+    width: 290px;
     height: 92px;
     color: #5f727f;
     display: flex;
     justify-content: center;
     flex-direction: column;
+    border: 1px solid #dfe5e8;
+    border-bottom: none;
+    
 }
 
 .price {
@@ -246,19 +250,19 @@ li {
     font-size: 16px;
 }
 
-.cbg {
+.begin-bg {
     background-color: #b0de79;
 }
 
-.avbg {
+.advan-bg {
     background-color: #7ee0bf;
 }
 
-.mtbg {
+.master-bg {
     background-color: #83bce9;
 }
 
-.isbg {
+.insane-bg {
     background-color: #a289e8;
 }
 
@@ -268,6 +272,12 @@ li {
     display: flex;
     flex-direction: column;
     justify-content: center;
+   
+}
+
+.border-sub{
+    border-right: 1px solid #dfe5e8;
+    border-left: 1px solid #dfe5e8;
 }
 
 .sub {
@@ -281,11 +291,10 @@ li {
     color: #a9b6c0;
 }
 
-.content-sub p {
+.content-sub ul li {
     line-height: 46px;
-    border-top: 0.5px solid #dfe5e8;
+    border-top: 1px solid #dfe5e8;
     text-align: center;
-    color: #5f727f;
 }
 
 .font-c {
@@ -297,52 +306,53 @@ li {
     color: #cad2d7;
 }
 
-.button {
-    width: 120px;
-    line-height: 40px;
-    background-color: #393d50;
-    border-radius: 20px;
-    text-align: center;
-    margin: 35px auto 0;
+.table-button {
+   width: 290px;
+   height: 113px;
+   justify-content: center;
+   display: inline-flex;
+   border: 1px solid #dfe5e8;
+   border-top: none;
+  
 }
 
 .button-tyle1 {
-    color: #fff;
-    text-decoration: none;
     font-family: Montserrat-Bold;
-    font-size: 16px;
+    width: 120px;
+    margin-top: 25px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 30px;
+    color: #fff;
+    background-color: #393d50;
+    font-size: 14px;
+    cursor: pointer;
 }
 
-.button:hover {
-    background-color: #83bce9;
+.block-1:hover{
+    background-color: #fff;
 }
 
-.fas {
-    padding-right: 5px;
-}
-
-.block-1:hover {
+.block-1:hover .table-title{
     margin-top: -22px;
-    padding-bottom: 44px;
-    background-color: #FFF;
+    padding-bottom:22px;
+    background-color:#fff;
+
 }
 
-.block-1:hover .table-title {
-    height: 116px;
+.block-1:hover .table-button {
+       margin-bottom: -22px;
+       padding-bottom:22px;
+       background-color:#fff;
 }
 
-.block-1:hover .button {
+.block-1:hover .button-tyle1 {
     background-color: #83bce9;
 }
 
+.block-1:hover .new-icon{
+    margin-top:-22px;
+    padding-bottom:22px;
 
-/*End Pricing Table 1*/
-
-.nen-vb {
-    background-color: #212331;
-    height: 400px;
-    text-align: center;
-    font-family: Montserrat-Bold;
-    font-size: 30px;
-    color: #fff;
 }
+
