--- a/css/PriceTable.css
+++ b/css/PriceTable.css
@@ -33,12 +33,14 @@
 }
 
 .khoi1 {
-    height:959px;
+    height: 959px;
     /*width: 1920px;*/
-    background:#2c2e3d;
+    background: #2c2e3d;
 }
 
+
 /*Header*/
+
 .header {
     height: 40px;
     background-color: #2c2e3d;
@@ -46,16 +48,18 @@
     padding-top: 24px;
 }
 
-.header-menu{
-    margin-left:75px;
+.header-logo{
+    margin-top: -6px;
+}
+.header-menu {
+    margin-left: 75px;
 }
 
 ul {
     list-style-type: none;
-   
 }
 
-a{
+a {
     text-decoration: none;
 }
 
@@ -66,40 +70,47 @@ a{
 
 .header-menu ul li a {
     color: white;
-    padding: 10px 18px;
+    padding: 8px 16px;
     font-family: Montserrat-Bold;
     font-size: 14px;
 }
 
 .header-menu ul li a:focus {
     border: 2px solid #fff;
-    padding: 8px 16px;
+    padding: 6px 14px;
 }
 
 .header-menu ul li a:hover {
     color: #08a6bc;
 }
 
+.header-icon{
+    margin-top:5px;
+}
 .header-icon ul li {
-   /* margin-left:4px;
-    margin-top: 10px;*/
+   /*  margin-left:4px;*/
+   /* margin-top: 10px;*/
     display: inline-flex;
 }
 
 .add{
-    font-family: SourceSansPro-Regular;
-    font-size: 14px;
-    display: inline-flex;
+    display: inline-block;
     width: 32px;
     height: 17px;
     background-image: url("../image/add.png");
-    justify-content: center;
+    text-align: center;
+}
+
+.cata{
+    margin-left:6px;
+    font-family: SourceSansPro-Regular;
+    font-size: 14px;
     color: #fff;
 }
 
 .item {
-    color: #98a8b4;
-    margin-right:4px;
+    color:#98a8b4;
+    margin-right:15px;
 }
 
 
@@ -109,7 +120,7 @@ a{
     height: 745px;
     /*width: 1920px;*/
     padding-top: 150px;
-    background-color:#2c2e3d;
+    background-color: #2c2e3d;
     /*margin-left: -375px;*/
     text-align: center;
 }
@@ -146,14 +157,14 @@ a{
     display: inline-flex;
 }
 
-.button-pur{
+.button-pur {
     font-family: Montserrat-Bold;
     width: 226px;
     height: 44px;
     line-height: 44px;
-    border: 2px solid #fff;
+    border: 3px solid #fff;
     border-radius: 30px;
-    margin-right:30px;
+    margin-right: 30px;
     color: #fff;
     font-size: 14px;
     cursor: pointer;
@@ -161,13 +172,11 @@ a{
 
 .slider-button a:hover {
     color: #4ec3c9;
-    border: 2px solid #4ec3c9;
+    border: 3px solid #4ec3c9;
 }
 
+.khoi2 {}
 
-
-.khoi2{
-}
 
 /*Title*/
 
@@ -218,15 +227,15 @@ a{
 .table-title {
     font-family: Montserrat-Light;
     font-size: 24px;
-    width: 290px;
+    width: 291px;
     height: 92px;
     color: #5f727f;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    border: 1px solid #dfe5e8;
-    border-bottom: none;
-    
+    border-width: 1px 0.5px 0px 0.5px;
+    border-style: solid;
+    border-color:#dfe5e8;
 }
 
 .price {
@@ -272,12 +281,12 @@ a{
     display: flex;
     flex-direction: column;
     justify-content: center;
-   
 }
 
-.border-sub{
-    border-right: 1px solid #dfe5e8;
-    border-left: 1px solid #dfe5e8;
+.border-sub {
+    border-width: 0px 0.5px 0px 0.5px;
+    border-style: solid;
+    border-color:#dfe5e8;
 }
 
 .sub {
@@ -307,13 +316,13 @@ a{
 }
 
 .table-button {
-   width: 290px;
-   height: 113px;
-   justify-content: center;
-   display: inline-flex;
-   border: 1px solid #dfe5e8;
-   border-top: none;
-  
+    width: 291px;
+    height: 113px;
+    justify-content: center;
+    display: inline-flex;
+    border-width: 0px 0.5px 1px 0.5px;
+    border-style: solid;
+    border-color:#dfe5e8;
 }
 
 .button-tyle1 {
@@ -329,30 +338,31 @@ a{
     cursor: pointer;
 }
 
-.block-1:hover{
+.block-1:hover {
     background-color: #fff;
 }
 
-.block-1:hover .table-title{
+.block-1:hover .table-title {
     margin-top: -22px;
-    padding-bottom:22px;
-    background-color:#fff;
-
+    padding-bottom: 22px;
+    background-color: #fff;
 }
 
 .block-1:hover .table-button {
-       margin-bottom: -22px;
-       padding-bottom:22px;
-       background-color:#fff;
+    margin-bottom: -22px;
+    padding-bottom: 22px;
+    background-color: #fff;
 }
 
 .block-1:hover .button-tyle1 {
     background-color: #83bce9;
 }
 
-.block-1:hover .new-icon{
-    margin-top:-22px;
-    padding-bottom:22px;
-
+.block-1:hover .new-icon {
+    margin-top: -22px;
+    padding-bottom: 22px;
 }
 
+.fa-caret-right{
+    margin-right:7px;
+}
