--- a/css/PriceTable.css
+++ b/css/PriceTable.css
@@ -2,8 +2,14 @@
     margin: 0;
     padding: 0;
 }
-/*font-family: 'Montserrat', sans-serif;
-font-family: 'Source Sans Pro', sans-serif;*/
+
+.montserrat{
+font-family: 'Montserrat', sans-serif;
+}
+
+.source{
+font-family: 'Source Sans Pro', sans-serif;
+}
 
 body{
     color: #5f727f;
@@ -20,6 +26,7 @@ body{
 .container {
     width: 1170px;
     margin: auto;
+    text-align: center;
 }
 
 /*class button use shared*/
@@ -46,7 +53,7 @@ body{
 }
 
 .header-logo{
-    margin-top: -6px;
+    margin-top: -7px;
     margin-right:75px;
 }
 
@@ -66,7 +73,7 @@ a {
 .header-menu ul li a {
     color:#99a9b5;
     padding: 8px 16px;
-    font-family: 'Montserrat', sans-serif;
+    /*font-family: 'Montserrat', sans-serif;*/
     font-weight: 700;
     font-size: 14px;
 }
@@ -93,7 +100,6 @@ a {
     width: 32px;
     height: 17px;
     background-image: url("../image/add.png");
-    text-align: center;
     position: absolute;
     top: 2px;
     left: 65%;
@@ -101,7 +107,6 @@ a {
 
 #add-number{
     margin-left:6px;
-    font-size: 14px;
     color: #fff;
 }
 
@@ -115,7 +120,6 @@ a {
     height: 745px;
     padding-top: 150px;
     background-color: #2c2e3d;
-    text-align: center;
     color: #fff;
 }
 
@@ -126,17 +130,19 @@ a {
 }
 
 .slider-caption {
-    font-family: 'Montserrat', sans-serif;
+    /*font-family: 'Montserrat', sans-serif;*/
+    font-weight: 300;
     padding-top: 112px;
     font-size: 70px;
 }
 
 .caption {
-     font-family: 'Montserrat', sans-serif;
-     font-weight:bold;
+    /*font-family: 'Montserrat', sans-serif;*/ 
+     font-weight:700;
 }
 
 .slider-content {
+	font-weight: 300;
     margin-top: 65px;
     font-size: 24px;
     line-height: 1.542;
@@ -148,7 +154,7 @@ a {
 }
 
 .button-pur {
-    font-family: 'Montserrat', sans-serif;
+    /*font-family: 'Montserrat', sans-serif;*/
     font-weight: 700;
     width: 226px;
     height: 44px;
@@ -168,39 +174,32 @@ a {
 
 /*Title*/
 .titledark {
-    text-align: center;
-    margin: auto;
+    font-size: 50px;
+    color: #3c3950;
+    padding-top: 140px;
 }
 
 .title-caption1 {
-    font-family: 'Montserrat', sans-serif;
+    /*font-family: 'Montserrat', sans-serif;*/
     font-weight: 300;
-    font-size: 50px;
-    color: #3c3950;
-    padding-top: 140px;
 }
 
 .title-caption2{
-    font-family: 'Montserrat', sans-serif;
+    /*font-family: 'Montserrat', sans-serif;*/
     font-weight: 700;
-    font-size: 50px;
-    color: #3c3950;
-    padding-top: 140px;
-
 }
 
 .title-sub {
     font-size: 16px;
     text-align: left;
-    color: #3c3950;
+    color: #5f727f;
     margin-top: 75px;
 }
 
 /*Pricing Table 1*/
 .table1 {
     margin: 160px 0;
-    display:
-    flex;
+    display:flex;
     flex-wrap: wrap;
     justify-content: center;
     text-align: center;
@@ -233,15 +232,12 @@ a {
 }
 
 .table-title1{
-    font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     font-size: 24px;
 }
 
 .senten {
-   /* font-family: 'Source Sans Pro', sans-serif;
-    font-size:14px;*/
-    color: #a9b6c0;
+    color: #99a9b5;
 }
 
 .price {
@@ -249,21 +245,13 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    background-color: #b0de79;
     color: #fff;
 }
 
-.font65 {
-    font-family: 'Montserrat', sans-serif;
+.font-price {
     font-weight: 300;
     font-size: 65px;
 }
-
-/*.font16 {
-   font-family: 'Source Sans Pro', sans-serif;
-    font-size: 16px;
-}*/
 
 .begin-bg {
     background-color: #b0de79;
@@ -304,11 +292,10 @@ a {
 .content-sub ul li {
     line-height: 46px;
     border-top: 1px solid #dfe5e8;
-    text-align: center;
 }
 
 .content-sub ul li del{
-     color: #cad2d7;
+     color: #99a9b5;
 }
 
 .table-button {
@@ -317,7 +304,6 @@ a {
     justify-content: center;
     display: inline-flex;
     border-width: 0px 0.5px 1px 0.5px;
-    border-style: solid;
     border-color:#dfe5e8;
 }
 
@@ -326,11 +312,6 @@ a {
 }
 
 .button-tyle1 {
-   /* font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-    width: 120px;
-    height: 40px;
-    line-height: 40px;*/
     margin-top: 25px;
     border-radius: 30px;
     color: #fff;
